--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.22.3",
+    "axios": "^1.1.2",
     "classnames": "^2.3.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "next": "12.2.3",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.54.0"
